# rust-backend-web

./: .env  .gitignore  Cargo.toml  dev.db  dev.db-shm  dev.db-wal
docs/: db.md  proxy.md  redis.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-04-22-013913_initial_setup/: up.sql
migrations/2024-04-22-143850_update_users/: up.sql
migrations/2024-04-29-000110_new_user/: up.sql
migrations/sqlx/: 0001_users_table.sql
src/: lib.rs  main.rs  schema.rs
src/controller/: user.rs
src/controllers/: login.rs  user.rs
src/controllers/ui_controller/: index.rs  login.rs
src/db/: database.rs  db.rs  db_setup.rs  diesel.rs  sqlite.rs
src/domain/: datatypes.rs  shops.rs  user_domain.rs
src/model/: user_model.rs
src/models/: queries.rs  schema.rs  user_model.rs
src/modules/: aws_s3.rs  cookie.rs  cuid.rs  email.rs  middleware.rs  middleware_domain.rs  middleware_msg.rs  password_hash.rs  pdf.rs  redis.rs  stripe.rs  token_pub.rs
src/modules/stripe/: stripe.rs  stripe_webhooks.rs
src/routes/: app_routes.rs  login_routes.rs  root_routes.rs  routing.rs  ui_routes.rs  users_routes.rs
src/routes/ui_routes/: index_page.rs
src/utils/: constants.rs
src/view/: setup.rs
src/view/pages/: index.html
src/view/templates/: layout.html
src/view/templates/index/: index.html
src/view/templates/index/components/: deleted_user.html  hello_button.html  show_all_users.html
src/view/templates/pages/endpoints/: endpoints.html
src/view/templates/pages/endpoints/components/: hello_button.html  ping_pong.html  show_all_users.html
src/view/templates/pages/forgot/: forgot.html
src/view/templates/pages/index/: index.html
src/view/templates/pages/login/: login.html
src/view/templates/pages/login/components/: login_fail.html
src/view/templates/pages/register/: register.html
src/view/templates/pages/reset/: reset.html
