[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = {version = "4.4.1", feature=["cookie-session"]}
actix-session = {version = "0.9.0", feature=["redis-actor-session", "cookie-session"]}
actix-redis = "0.13.0"
actix-service = "2.0.2"
serde = {version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenvy = "0.15.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
tera = "1.19.1"
chrono = {version = "0.4.37", features = ["serde"]}
uuid = {version = "1.8.0", features = ["v4"]}
futures = "0.3.30"
futures-util = "0.3.30"
cargo-watch = "8.5.2"
derive_more = "0.99.17"
thiserror = "1.0.59"
argon2 = "0.5.3"
pasetors = "0.6.8"
log = "0.4.21"
# SQLX
sqlx = {version = "0.7.1", features = ["sqlite", "runtime-tokio", "chrono", "macros"]}
# Diesel
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"

[lib]
name = "lib"
path ="src/lib.rs"
