[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web Framework
actix-rt = "2.9.0"
actix-web = {version = "4.4.1", feature=["cookie-session"]}
actix-session = {version = "0.9.0", feature=["redis-actor-session", "cookie-session"]}
actix-service = "2.0.2"
serde = {version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenvy = "0.15.0"
# Templating Engine
tera = "1.19.1"
# Error Handling
thiserror = "1.0.59"
# Password Hashing
argon2 = "0.5.3"
pasetors = "0.6.8"
# Logging
log = "0.4.21"
env_logger = "0.11.3"
# UUID
cuid2 = "0.1.2"
uuid = {version = "1.8.0", features = ["v4"]}
# Redis
redis = { version = "0.25.3", features = ["tokio-native-tls-comp"] }
actix-redis = "0.13.0"
# AWS S3
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.27.0"
tokio = { version = "1.37.0", features = ["full"] }
# Email SMTP
lettre = {version = "0.11.7", features = ["builder", "tokio1-native-tls"]}
# PDF Generation
printpdf = "0.7.0"
# SQLX
sqlx = {version = "0.7.1", features = ["sqlite", "runtime-tokio", "chrono", "macros"]}
# Diesel
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
# Other
lazy_static = "1.4.0"
chrono = {version = "0.4.37", features = ["serde"]}
futures = "0.3.30"
futures-util = "0.3.30"
derive_more = "0.99.17"

[dev-dependencies]
cargo-watch = "8.5.2"
mockall = "0.12.1"

[lib]
name = "lib"
path ="src/lib.rs"